--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
      </nav>
       <!-- loader  -->
       <div class="loader_bg">
-         <div class="loader"><img src="/images/loading.gif" alt="#" /></div>
+         <div class="loader"><img src="images/loading.gif" alt="#" /></div>
       </div>
       <!-- end loader -->
       <!-- banner -->
@@ -112,7 +112,7 @@
                </div>
                <div class="col-xl-8 col-lg-8 col-md-12 padding_right">
                   <div class="banner_main_img">
-                     <figure><img src="/images/eco-fuels.jpeg" alt="#"/>
+                     <figure><img src="images/eco-fuels.jpeg" alt="#"/>
                      </figure>
 
                   </div>
@@ -127,7 +127,7 @@
             <div class="row d_flex ">
                <div class="col-xl-7 col-lg-7 col-md-12 padding_lert">
                   <div class="about_img">
-                     <figure><img src="/images/bg-img.jpg" alt="#"/></figure>
+                     <figure><img src="images/bg-img.jpg" alt="#"/></figure>
                   </div>
                </div>
                <div class="col-xl-5 col-lg-5 col-md-12">
@@ -157,8 +157,8 @@
                   </div>
                </div>
                <div class="col-xl-7 col-lg-7 col-md-12 padding_right order_1">
-                  <div class="our_img">
-                     <figure><img src="/images/sus.jpg" alt="#"/></figure>
+                  <div class="our_">
+                     <figure>< src="images/sus.jpg" alt="#"/></figure>
                   </div>
                </div>
             </div>
@@ -173,7 +173,7 @@
                   <div style="justify-content: center;" class="row">
                      <div class="col-md-6 padd_lrri">
                         <div class="our_fruit_img">
-                           <figure><img src="/images/economic.webp" alt="#"/></figure>
+                           <figure><img src="images/economic.webp" alt="#"/></figure>
                         </div>
                      </div>
                   </div>
