--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                </div>
                <div class="col-xl-7 col-lg-7 col-md-12 padding_right order_1">
                   <div class="our_">
-                     <figure>< src="images/sus.jpg" alt="#"/></figure>
+                     <figure><img src="images/sus.jpg" alt="#"/></figure>
                   </div>
                </div>
             </div>
